<resources>
    <string name="app_name">ECE Shop</string>
    <string name="splash_screen_image_text">Splash screen image</string>
    <string name="ece_shop_label">ECE Shop</string>
    <string name="sublabel_splashscreen">A pristine shopping experience</string>
    <string name="buy_whatever_with_ece_shop">Buy whatever with ECE shop</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_to_ece_shop">Welcome to ECE shop!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="close">Close</string>
    <string name="center_dialog_text">Center dialog text</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
    <string name="welcome_to_the_home_page">Welcome to the home page!</string>
    <string name="facebook_app_id">229528329173745</string>
    <string name="fb_login_protocol_scheme">fb229528329173745</string>
    <string name="reset_password">Reset password</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="welcome_dash">Welcome</string>
    <string name="name_placeholder">Name placeholder</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="categories">Category</string>
    <string name="search_for_a_product">Search for a product</string>
    <string name="categories_text">Categories</string>
    <string name="clothes">Clothes</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_price">Product price</string>
    <string name="product_orders">Product orders</string>
    <string name="products">Products</string>
    <string name="sort_by">Sort by</string>
    <string name="latest">Latest</string>
    <string name="search">Search</string>
    <string name="queryHint">Search for a product</string>
    <string name="welcome_to_the_new_activity">Welcome to the new activity!</string>
    <string name="comments">Comments</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="in_stock">In stock:</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="post">Post</string>
    <string name="user_s_name_and_last_name">Users name and last name</string>
    <string name="sent_at_01_01_2000">Posted at: 01/01/2000</string>
    <string name="longDet">Comment detailsdfghbjnkmjnhbfdxsfxgvhbjnkmjnhbgfvdxsxfghbjnkmnhbgfvdxsxfgvhbjnkmjnhbgfvxdsxfchbnm,njbhgvfxdchnbjmk,.mnjhbgvfchbnm, nbjhgvf</string>
    <string name="stefan_kjoropanovski_gmail_com">stefan.kjoropanovski@gmail.com</string>
    <string name="there_are_no_comments_to_show_for_this_product">There are no comments to show for this product.</string>
    <string name="products_in_cart">Products in cart</string>
    <string name="cannot_display_any_products_your_cart_is_empty">Cannot display any products, your cart is empty.</string>
    <string name="orders_20">Orders: 20</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="order_now">Order now</string>
    <string name="remove">Remove</string>
    <string name="order_all">Order all</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_with_stripe">Pay with stripe</string>
    <string name="total_price">Total price:</string>
    <string name="n_a">N/A</string>
    <string name="payment_details">Payment details</string>
    <string name="make_payment">Make payment</string>
    <string name="product_s_name">Product\'s name</string>
    <string name="quantity_n_a">Quantity: N/A</string>
    <string name="price_unknown">Price: Unknown</string>
    <string name="order_items">Order items</string>
    <string name="your_shipping_address">Your shipping address</string>
    <string name="shipping_address">Shipping address</string>
    <string name="phone_number">Phone number</string>
    <string name="list_of_orders">List of orders</string>
    <string name="you_don_t_have_any_orders_yet">You don\'t have any orders yet.</string>
    <string name="order_id">Order id</string>
    <string name="address_of_order">Address of order</string>
    <string name="price_total_2000">Price total: 2000$</string>
    <string name="status">Status:</string>
    <string name="active">Active</string>
    <string name="ordered_at_20_02_2012">Ordered at: 20/02/2012</string>
    <string name="you_don_t_have_any_orders_of_this_sort_yet">You don\'t have any orders of this sort yet.</string>
    <string name="order_details">Order details</string>
    <string name="address_n_a">Address: N/A</string>
    <string name="random_order_id">Random order ID</string>
    <string name="total_amount_2000">Total amount: 2000$</string>
    <string name="cancelled">Cancelled</string>
    <string name="ordered_at_09_08_2002">Ordered at: 09/08/2002</string>
    <string name="estimated_arrival_time_40_days">Estimated arrival time: 40 days</string>
    <string name="cancel_order">Cancel order</string>
    <string name="proceed">Proceed</string>
    <string name="fill_in_the_details">Fill in the details</string>
    <string name="short_description">Short description</string>
    <string name="long_description">Long description</string>
    <string name="select_a_category">Select a category</string>
    <string name="jewelry">Jewelry</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="add_product">Add product</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="change_any_of_the_values">Change any of the values</string>
    <string name="edit_product">Edit product</string>
    <string name="profile_username">Profile username</string>
    <string name="profile_email">Profile email</string>
    <string name="total_orders_55">Total orders: 55</string>
    <string name="total_value_spent_200">Total value spent: 200$</string>
    <string name="total_amount_20000">Total amount: 20000$</string>
    <string name="full_name">Full name</string>
    <string name="update_profile">Update profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="search_by_email">Search by email</string>
    <string name="user_s_full_name_is_here">User\'s full name is here.</string>
    <string name="user_email_is_here">User email is here</string>
    <string name="orders_n_a">Orders: N/A</string>
    <string name="registered_at_15_12_2021">Registered at: 15/12/2021</string>
    <string name="user_id_field">User ID field</string>
    <string name="_389_78452241">+389-78452241</string>
    <string name="macedonia">Macedonia</string>
    <string name="orders_list">Orders list</string>
    <string name="this_user_has_no_orders_of_this_type">This user has no orders of this type.</string>
    <string name="status_ongoing">Status: Ongoing</string>
    <string name="set_completed">Set completed</string>
    <string name="newest">Newest</string>
    <string name="no_products_have_been_found_for_this_search_filter">No products have been found for this search filter.</string>

    <string-array name="categories">
        <item>All</item>
        <item>Clothes</item>
        <item>Accessories</item>
        <item>Hardware</item>
        <item>Devices</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="productCategories">
        <item>Clothes</item>
        <item>Hardware</item>
        <item>Devices</item>
        <item>Books</item>
        <item>Supplements</item>
        <item>Accessories</item>
        <item>Jewelry</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="sorts">
        <item>Latest</item>
        <item>Oldest</item>
        <item>Price ascending</item>
        <item>Price descending</item>
        <item>Orders</item>
    </string-array>

    <string-array name="sortsComments">
        <item>Latest</item>
        <item>Oldest</item>
    </string-array>

    <string-array name="sortOrders">
        <item>Latest</item>
        <item>Oldest</item>
        <item>Status: Completed</item>
        <item>Status: Ongoing</item>
        <item>Status: Cancelled</item>
    </string-array>

    <string-array name="sortUsers">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Active orders</item>
    </string-array>

    <string-array name="sortUserOrders">
        <item>Status: Ongoing</item>
        <item>Status: Completed</item>
        <item>Status: Cancelled</item>
    </string-array>

</resources>