<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/email_field_login"
        android:drawableStart="@drawable/ic_email"
        android:layout_width="0dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:background="@drawable/edit_text_bg"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableTint="@color/accentColor"
        android:backgroundTint="@color/gColor4"
        />

    <EditText
        android:id="@+id/password_field_login"
        android:drawableStart="@drawable/ic_security"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:background="@drawable/edit_text_bg"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:maxLength="30"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field_login"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".0"
        app:layout_constraintHorizontal_bias=".5"
        android:layout_marginTop="20dp"
        android:drawableTint="@color/accentColor"
        android:backgroundTint="@color/gColor4"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_bg"
        />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@id/password_field_login"
        app:layout_constraintTop_toBottomOf="@id/password_field_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/accentColor"
        android:focusable="true"/>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/forgotPass"
        android:textColor="@color/teal_200"
        android:buttonTint="@color/accentColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>