<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:id="@+id/order_container">

    <com.google.android.material.card.MaterialCardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        card_view:strokeColor="@android:color/darker_gray"
        card_view:strokeWidth="1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="8dp"
        card_view:cardBackgroundColor="#042382"
        card_view:cardCornerRadius="2dp">

        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="-10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:strokeColor="#042382"
        app:strokeWidth="3dp"
        app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="55"
                    android:id="@+id/order_address"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:text="@string/address_of_order"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="45"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:id="@+id/order_price"
                        android:text="@string/price_total_2000"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/status"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="@string/active"
                            android:id="@+id/order_status"
                            android:textSize="13sp"
                            android:gravity="center"
                            android:textColor="#2DDA0F"
                            android:fontFamily="sans-serif-smallcaps"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/order_date"
                        android:text="@string/ordered_at_20_02_2012"
                        android:textSize="13sp"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="sans-serif-smallcaps"/>

                </LinearLayout>

            </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>